Fixed spacing issue on all pages

--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ main {
   max-width: 1280px;
 }
 main section {
-  margin-top: 1.6rem;
+  margin-top: 1.6rem !important;
 }
 .bold {
     font-weight: bold;
